# q-narwhalknight

./: .env.example  .gitignore  AGENT.md  AUTONOMOUS_IP_DISCOVERY_TEST.sh  BEP5_BEP44_TECHNICAL_REVIEW.aux  BEP5_BEP44_TECHNICAL_REVIEW.out  BEP5_BEP44_TECHNICAL_REVIEW.tex  BITCOINTALK_v0.1.9-beta_ANNOUNCEMENT.bbcode  BRIDGE_RESCUE_INSTRUCTIONS.md  CLAUDE.md  Cargo-test.toml  Cargo.toml  Cargo_example.toml  Cross.toml  DATABASE_CORRUPTION_ROOT_CAUSE_ANALYSIS.md  DEPLOYMENT_STATUS.md  DETAILED_PROOF.sh  DEVELOPER_SETUP.md  DISCORD_ANNOUNCEMENT.txt  Dockerfile  Dockerfile.bootstrap  Dockerfile.cross-compile  Dockerfile.minimal  Dockerfile.simple  Dockerfile.test  Dockerfile.windows  Dockerfile.windows-api  Dockerfile.zk-p2p  GITHUB_SETUP.md  GITLAB_SETUP.md  GUI_COORDINATION_FINAL.md  GUI_INTEGRATION_COMPLETE.md  INSTRUCTIONS_FOR_OTHER_SERVER.txt  IP_CONNECTION_DEMONSTRATION.sh  ISSUES.md  LICENSE  MobaXterm_185.182.185.227root_20260327_173451.rtf  MobaXterm_185.182.185.227root_20260327_221454.rtf  ORGANIZE_DOCS.sh  PAAS_DEVELOPER_INTEGRATION_GUIDE.tex  (+280 more)
crates/crown-ash-api/: Cargo.toml
crates/crown-ash-api/src/: events.rs  handlers.rs  lib.rs  persistence.rs  streaming.rs
crates/crown-ash-client/: Cargo.toml
crates/crown-ash-client/src/: lib.rs  main.rs
crates/crown-ash-narrative/: Cargo.toml
crates/crown-ash-narrative/src/: cascade.rs  chronicle.rs  history.rs  lib.rs  llm.rs  personality.rs  templates.rs
crates/crown-ash-plugin/: Cargo.toml
crates/crown-ash-plugin/src/: host.rs  lib.rs  storage.rs
crates/crown-ash-sim/: Cargo.toml
crates/crown-ash-sim/src/: ai.rs  birth.rs  cohesion.rs  combat.rs  diplomacy.rs  economy.rs  education.rs  events.rs  intrigue.rs  lib.rs  lifecycle.rs  map.rs  random.rs  realm_split.rs  relationships.rs  religion.rs  succession.rs  tick.rs  trade.rs  world_gen.rs  world_state.rs
crates/crown-ash-sim/tests/: stress_tests.rs
crates/mitochondria-sim/: Cargo.toml
crates/mitochondria-sim/src/: consensus.rs  dna_storage.rs  droplet.rs  electro_wetting.rs  lib.rs  main.rs  simulation.rs  tor_control.rs  visualization.rs  water_table_demo.rs
crates/q-aegis-ql/: Cargo.toml
crates/q-aegis-ql/src/: access_control.rs  lib.rs  ntt.rs  (+1 more)
crates/q-ai-inference/: Cargo.toml
crates/q-api-server/: .env.example  Cargo.toml  DEX_TESTING_SUMMARY.md  build.rs
crates/q-arbitrum-cache/: Cargo.toml
crates/q-benchmarks/: Cargo.toml
crates/q-bep44-discovery/: Cargo.toml
crates/q-bio-dsl/: Cargo.toml
crates/q-bitcoin-bridge/: Cargo.toml  README.md
crates/q-bitnet-ffi/: Cargo.toml
crates/q-bounty-protocol/: Cargo.toml
crates/q-bounty-server/: Cargo.toml
crates/q-cache/: Cargo.toml
crates/q-compute/: Cargo.toml
crates/q-consensus-guard/: Cargo.toml
crates/q-cross-shard/: Cargo.toml
crates/q-crypto-advanced/: Cargo.toml
crates/q-crypto-simd/: Cargo.toml
crates/q-dag-knight/: CONSENSUS_SAFETY.md  Cargo.toml
crates/q-dandelion/: Cargo.toml
crates/q-dex/: Cargo.toml
gui/: Cargo.toml  FULLNODE.md  build.rs
gui/quantum-wallet/: .env.example  .env.production  DISTRIBUTED_AI_FIX_SUCCESS.md  MESSAGE_PERSISTENCE_FINAL_FIX.md  MESSAGE_PERSISTENCE_FIX.md  P2P_INFINITE_SCROLL_IMPLEMENTATION.md  THEME_FRAME_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
gui/quillon-mobile/: app.json  crypto-shim.js  empty-module.js  index.js  metro.config.js  package-lock.json  package.json  tsconfig.json
gui/slint-wallet/: Cargo.toml  build.rs
gui/src/: embedded_node.rs  fix_append_log.py  main.rs  windows_node.rs
gui/ui/: canvas_visualizations.slint  colors.slint  dag_visualization.slint  explorer.slint  lvrf_randomness.slint  main.slint  main_backup.slint  main_fixed.slint  main_simple.slint  narwhal_mempool.slint  network_topology.slint  phase_transition.slint  quantum_entropy.slint  quantum_storage.slint  tor_anonymity.slint  vdf_progress.slint
gui/webgpu-miner/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
q-grover/: README.md  pyproject.toml  q-grover.toml
q-grover/benchmarks/: bench_grover_vs_classical.py
q-grover/q_grover/: __init__.py  api_client.py  cli.py  config.py  difficulty.py  grover_engine.py  hardware.py  metrics.py  mev_shield.py  miner.py  oracle.py  origin_api.py  transpiler.py  vdf.py
q-grover/scripts/: mine_one_block.py
shadowchain-writer/: CHAPTERS_3-5_PDF_COMPLETE.md  CHAPTER_5_PDF_STATUS.md  CHAPTER_5_PLANNING_COMPLETE.md  CHAPTER_ANALYSIS_AND_IMPROVEMENTS.md  CHAPTER_FIVE_COMPLETE.md  COMPLETE_EXPERT_IMPROVEMENTS.md  COMPLETE_PDF_CHAPTERS_1-5.md  Cargo.toml  DEEPSEEK_GROK_FEEDBACK_INTEGRATION.md  EXPERT_FEEDBACK_IMPROVEMENTS.md  EXPERT_IMPROVEMENTS_COMPLETE.md  FINAL_SHARING_PACKAGE.md  NEXUS_VEIL_TECHNICAL_DEEP_DIVE.md  README.md  REVISION_COMPLETE.md  REVISION_PLAN_v2.md  REVISION_STATUS_COMPLETE.md  SHARING_PACKAGE_README.md  chapter1_content_improved.tex  chapter1_content_new.tex  chapter2_content_improved.tex  chapter2_content_new.tex  chapter3_content.tex  chapter3_content_improved.tex  chapter3_content_new.tex  chapter4_content.tex  chapter4_content_improved.tex  chapter4_content_new.tex  chapter5-entities.json  chapter5_content.tex.broken-backup  chapter5_content_improved.tex  chapter5_content_new.tex  chapter5_istanbul_epilogue.md  chapter_five.md  chapter_five_outline.md  chapter_four.md  chapter_one_improved.md  chapter_one_improvements_summary.md  chapter_three.md  chapter_two.md  (+31 more)
shadowchain-writer/src/: ai.rs  analysis.rs  cli.rs  database.rs  entities.rs  latex.rs  main.rs  story.rs
shadowchain-writer/story.db/: 000008.sst  000049.sst  000070.sst  IDENTITY  LOG  LOG.old.1759993451206675  LOG.old.1759993466830776  LOG.old.1759993472259721  LOG.old.1759993477244816  LOG.old.1759993485860580  LOG.old.1759993499980325  LOG.old.1759993524472336  LOG.old.1759993545702989  LOG.old.1759993585941712  LOG.old.1759996509667014  LOG.old.1759996523170396  LOG.old.1759996534517268  LOG.old.1759996674353553  LOG.old.1759996686795480  LOG.old.1759996908809290  LOG.old.1759996918919153  LOG.old.1759997787583933  MANIFEST-000076
(+5459 files in other folders)
