[workspace]
resolver = "2"
members = [
    "crates/q-types",
    "crates/q-wallet", 
    "crates/q-api-server",
    "crates/q-visualizer",
    "crates/q-narwhal-core",
    "crates/q-dag-knight",
    "crates/q-network",
    "crates/q-quantum-rng",
    "crates/q-lattice-vrf",
    "crates/q-vdf",
    "crates/q-fairqueue",
    "crates/q-tor-client",
    "crates/q-tor-circuit",
    "crates/q-dandelion",
    "crates/q-storage"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Quantum-DAG Labs Core Contributors"]
repository = "https://github.com/quantum-dag-labs/Q-NarwhalKnight"

[workspace.dependencies]
# Core Rust ecosystem
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"

# Networking
libp2p = { version = "0.54", features = ["noise", "yamux", "tcp", "quic", "gossipsub", "identify", "ping", "autonat"] }
libp2p-quic = "0.10"

# Cryptography (Phase 0: Classical)
ed25519-dalek = "2.0"
ring = "0.17"
sha3 = "0.10"

# Post-quantum cryptography (Phase 1+)
pqcrypto-dilithium = "0.4"
pqcrypto-kyber = "0.7"
pqcrypto-falcon = "0.3"

# Database - RocksDB for quantum storage (no SQLite needed)
# sqlx removed - we use custom RocksDB implementation

# Metrics and observability
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# WebSocket for visualizer
tokio-tungstenite = "0.21"

# Serialization
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# VDF and quantum entropy
vdf = "0.1"
rand = "0.8"
rand_core = "0.6"

# Zero-knowledge proofs
risc0-zkvm = "1.0"

# Configuration
config = "0.13"

# Testing
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

# Tor integration (use latest stable versions to avoid SQLite conflicts)
arti-client = "0.5"
tor-circmgr = "0.5" 
arti-netdir = "0.5"
tor-rtcompat = "0.5"
arti-config = "0.5"
# SQLite version override for compatibility
rusqlite = "0.30"

# High-performance storage
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
lz4 = "1.24"

# Linear algebra and mathematics
ndarray = { version = "0.15", features = ["serde"] }

# Note: SQLite not used - we have RocksDB quantum storage