[workspace]
resolver = "2"
exclude = ["test_tx_propagation", "crates/crown-ash-client"]
members = [
    "crates/q-chat-types",
    "crates/q-types",
    "crates/q-wallet",
    "crates/q-api-server",
    "crates/q-visualizer",
    "crates/q-narwhal-core",
    "crates/q-dag-knight",
    "crates/q-network",
    "crates/q-quantum-rng",
    "crates/q-lattice-vrf",
    "crates/q-vdf",
    "crates/q-fairqueue",
    "crates/q-tor-client",     # Re-enabled: Fixed dependency compatibility
    "crates/q-tor-circuit",    # Re-enabled: Fixed Tor library compatibility
    # "crates/q-bitcoin-bridge", # New: Bitcoin network bridge for anonymous peer discovery - DEACTIVATED
    "crates/q-dandelion",
    # "crates/q-dns-phantom",    # DEACTIVATED
    # "crates/q-bep44-discovery", # New: BEP-44 DHT peer discovery (replaces DNS-phantom) - DEACTIVATED
    "crates/q-storage",
    "crates/q-mining",
    "crates/q-precision",
    "crates/q-vm",
    "crates/q-robot-control",
    "crates/q-higgs-hydro",  # Higgs field manipulation for water-based quantum computation
    "crates/q-higgs-simulator",  # 3D Higgs field simulation with attosecond laser control
    "crates/q-robot-cli",    # Quantum water robot control CLI
    "crates/void-walker",
    "crates/q-miner",        # High-performance CPU/GPU miner
    "crates/q-sharding",
    "crates/q-cache",        # Phase 2: Intelligent hierarchical caching system
    # "crates/q-benchmarks",   # Performance benchmarking and optimization (Server Beta) - TEMPORARILY DISABLED
    "crates/q-crypto-simd",  # SIMD cryptographic acceleration (Server Beta)
    "crates/q-kernel-io",    # Kernel I/O optimizations with io_uring and NUMA (Server Beta)
    "crates/q-cross-shard",  # Cross-shard communication infrastructure (Server Beta)
    "crates/q-plugin-system", # Plugin system for extensible architecture
    "crates/q-quantum-crypto", # Quantum cryptography plugin
    "crates/q-quantum-mixing", # Quantum transaction mixing plugin
    "crates/q-zk-stark",      # ZK-STARK proofs with GPU acceleration
    "crates/q-zk-snark",      # ZK-SNARK toolkit (Groth16, PLONK, Marlin)
    "crates/q-lattice-guard", # Post-quantum lattice-based zk-SNARK (RLWE)
    "crates/q-ivc",           # IVC circuit gadgets (NTT, Poseidon, Dilithium, BLAKE3 in R1CS)
    "crates/q-recursive-proofs", # Recursive SNARKs for eliminating weak subjectivity
    "crates/q-tip-proof-stir",  # Windowed FRI tip proof — wraps q-zk-stark with anchor-chain + binding-commit (v10.9.42)
    "crates/q-rlwe-vrf",      # Post-quantum VRF based on Ring-LWE for mining
    "crates/q-zk-p2p",        # Zero-knowledge enhanced P2P networking
    "crates/q-dex",           # Decentralized exchange with ZK privacy
    "crates/q-oracle",        # Oracle network for price feeds
    "crates/q-neural-oracle", # Quantum Neural Oracle - ML prediction infrastructure
    "crates/q-stablecoin",    # Algorithmic stablecoin management
    "crates/q-narwhalknight", # High-level developer-friendly API wrapper for proven DNS-Phantom mesh networking
    "crates/q-tps-benchmark",  # Real-world TPS benchmark tool
    "crates/q-ipfs-storage",   # IPFS-RocksDB decentralized storage
    "crates/q-aegis-ql",       # AEGIS-QL post-quantum access control
    "crates/q-governance",     # Proof-of-Contribution Governance with mining-weighted voting
    "crates/q-quillon-bank",   # Quantum banking with CDP and PaaS revenue
    "crates/q-tui",            # Beautiful terminal UI for node monitoring
    "crates/q-quillon-bank-cli", # Quillon Bank CLI management interface
    "crates/q-bounty-protocol",  # Testnet bounty protocol with RocksDB + AEGIS-QL
    "crates/q-bounty-server",    # Bounty API server with Axum REST endpoints
    "gui",
    "gui/slint-wallet",
    "crates/q-resonance",
    "crates/q-compute",      # Starship Endgame — 100% compute utilization orchestrator
 "sdk/rust", "crates/q-ai-inference", "crates/q-crypto-advanced", "crates/q-index-fund", "crates/q-mining-pool", "crates/q-temporal-shield", "crates/q-bitnet-ffi", "crates/q-consensus-guard", "crates/q-bio-dsl", "crates/q-eternal-cypher", "crates/q-dune", "crates/q-flux", "crates/q-queue",
    "crates/q-sqisign-sys",  # SQIsign C reference implementation FFI bindings
    "crates/q-sqisign",      # Safe Rust wrapper for SQIsign post-quantum signatures
    "crates/q-log-privacy",  # Privacy-preserving log redaction
    "crates/crown-ash-types",   # Crown & Ash — shared game data types
    "crates/crown-ash-sim",     # Crown & Ash — core deterministic simulation
    "crates/crown-ash-plugin",  # Crown & Ash — WASM plugin (native fallback for tests)
    "crates/crown-ash-api",     # Crown & Ash — REST API handlers
    "crates/crown-ash-narrative", # Crown & Ash — narrative text generation (templates + optional LLM)
    # "crates/crown-ash-client",  # Crown & Ash — Bevy game client (build separately: cargo check --manifest-path crates/crown-ash-client/Cargo.toml)
    "crates/q-trading-bot",      # Water Robot DCA + Dagknight SIMD trading bot
    "crates/q-turn",             # Custom STUN/TURN relay server — zero IP leak WebRTC
    "crates/q-ivc-verifier-wasm", # v10.9.18: WASM verifier scaffolding for browser wallets (Phase 1 placeholder; Phase 2 = real Nova)
    "crates/q-sync-optimizers",  # Scientific sync-improvement toolkit: Kalman BDP, Beta scores, CUBIC, Little's law, info-theoretic floor, Markov peer state, EWMV RTT, logistic peer-fail predictor (TODO: integrate into turbo_sync.rs)
]

[workspace.package]
version = "10.9.58"  # v10.9.58: security cherry-picks — PR #66 (save_wallet_balance max-wins, CLAUDE.md Rule 1), #67 (AEGIS local-admin fail-closed), #68 (ProductionMempool real validation)
edition = "2021"
description = "Quantum-Enhanced DAG-BFT Consensus System with Distributed AI"
homepage = "https://quillon.xyz"
repository = "https://code.quillon.xyz"
keywords = ["quantum", "consensus", "dag-bft", "distributed-ai"]
categories = ["science", "network-programming"]
license = "Apache-2.0"
rust-version = "1.86"
authors = ["Quantum-DAG Labs Core Contributors"]

# Architecture compatibility - removed core_arch patch for stable Rust compatibility

# Examples are defined in individual crate Cargo.toml files

[workspace.dependencies]
# Core Rust ecosystem
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4", features = ["limit"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "timeout"] }
hyper = "1.0"

# Networking - Enhanced for real network connectivity (libp2p 0.56 upgrade)
# mdns removed from default features - will be added conditionally in q-network for Linux only
# 🔥 v2.0.0: Upgraded to libp2p 0.56 with WebRTC support via separate crate
# NOTE: connection-limits is built-in to libp2p 0.56, not a feature flag
# v10.9.27: enabled "memory-connection-limits" (OOM-safety: refuse new conns under memory pressure)
# and "metrics" (Prometheus-format /metrics endpoint with peer count, gossipsub mesh, connection
# close reasons, request-response latency — diagnostic gold for "why did this peer disconnect")
libp2p = { version = "0.56", features = ["noise", "yamux", "tcp", "gossipsub", "identify", "ping", "kad", "upnp", "macros", "tokio", "request-response", "dns", "quic", "websocket", "autonat", "relay", "dcutr", "memory-connection-limits", "metrics"] }
# 🌐 WebRTC-Direct transport for browser P2P connectivity (alpha) - NOT in workspace (optional per-crate)
reqwest = { version = "0.12", features = ["json", "socks", "stream", "rustls-tls", "blocking"] }

# Real network implementations
arti-client = "0.9"
arti-hyper = "0.9"
tor-rtcompat = "0.9"
tor-hsservice = "0.9"
hickory-dns = "0.24"
# Use bitcoin 0.30 for compatibility with bitcoincore-rpc 0.17
bitcoin = { version = "0.30", features = ["serde"] }
crc32fast = "1.3"
# base64 = "0.21" # Removed duplicate, using 0.22.1 below
hex = "0.4"

# Cryptography (Phase 0: Classical)
ring = "0.17"
sha3 = "0.10"
sha2 = "0.10"
rand = "0.9.1"
rand_chacha = "0.9"

# v2.5.1-beta: AEAD encryption for P2P AI message privacy
chacha20poly1305 = "0.10"

# Post-quantum cryptography (Phase 1+) - GLIBC compatible versions
pqcrypto-dilithium = "0.5"
pqcrypto-kyber = "0.7"
pqcrypto-falcon = "0.3"
pqcrypto-traits = "0.3"
dilithium = "0.1"

# Safetensors and tokenizers for model weights (required by mistralrs-core)
safetensors = "0.6.0"
tokenizers = { version = "0.21.2", default-features = false }

# Additional mistralrs-core dependencies (avoiding duplicates)
utoipa = "5.3.1"
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq", "tokio", "rustls-tls"] }
tqdm = "0.7.0"
minijinja = { version = "2.10.2", features = ["builtins", "json"] }
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
regex-automata = { version = "0.4.9", features = ["meta"] }
rustc-hash = "2.1.1"
vob = "3.0.4"
cfgrammar = "0.13.10"
lrtable = "0.13.10"
galil-seiferas = "0.1.5"
radix_trie = "0.2.1"
bytemuck = "1.23.0"
tokio-rayon = "2.1.0"
rand_isaac = "0.4.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
strum = { version = "0.27.1", features = ["derive"] }
derive_more = { version = "2.0.1", default-features = false, features = ["from"] }
akin = "0.4.0"
variantly = "0.4.0"
derive-new = "0.7.0"
sysinfo = "0.30.13"
bytemuck_derive = "1.9.3"
schemars = "0.8.22"
serde_yaml = "0.9.34"
serde_plain = "1.0.2"
as-any = "0.3.2"
llguidance = { git = "https://github.com/guidance-ai/llguidance.git", version = "1.0.0", default-features = false, features = ["lark"], rev = "c432092" }
toktrie_hf_tokenizers = { git = "https://github.com/guidance-ai/llguidance.git", version = "1.0.0", rev = "c432092" }
serde-big-array = "0.5.1"
interprocess = "2.2.3"
urlencoding = "2.1.3"
scraper = "0.23.1"
html2text = "0.14.4"
ordered-float = "5.0.0"
hashbrown = "0.15.3"
bm25 = "2.2.1"
rubato = "0.16.2"  # Audio resampling for mistral.rs audio processing
rustfft = "6.2.0"
hound = "3.5.1"
apodize = "1.0.0"
symphonia = { version = "0.5.4", default-features = false, features = ["mp3", "flac", "vorbis", "wav", "isomp4", "ogg", "pcm"] }
statrs = "0.17.1"

# Additional dependencies needed by q-ai-inference and mistralrs-core
ahash = "0.8.12"
libc = "0.2.172"
csv = "1.3.1"
dirs = "6.0.0"
objc = "0.2.7"  # macOS/iOS only
memmap2 = "0.9.5"
# Note: parking_lot, num-traits, async-trait, yoke, pyo3-build-config, ctrlc, directories already exist elsewhere

# v8.5.0: Auto-update binary swap + version comparison
self-replace = "1.5"
semver = "1"

# Database - RocksDB for quantum storage (no SQLite needed)
# sqlx removed - we use custom RocksDB implementation

# Metrics and observability - compatible versions
prometheus = "0.13.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

# Async utilities (updated for mistral.rs compatibility)
futures = { version = "0.3", features = ["std"] }
futures-util = { version = "0.3.31", features = ["std"] }
futures-core = "0.3"
pin-project-lite = "0.2"

# WebSocket for visualizer (updated version for mistral.rs compatibility)
tokio-tungstenite = "0.24.0"

# Serialization
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }

# VDF and quantum entropy
vdf = "0.1"
rand_core = "0.6"

# Hashing
blake3 = { version = "1.5", features = ["std", "rayon", "prefer_intrinsics"] } # v5.1.1: prefer_intrinsics ensures SIMD via C intrinsics (works with mingw cross-compile)

# Zero-knowledge proofs
risc0-zkvm = "1.0"

# Configuration
config = "0.13"

# CLI/TUI utilities
console = "0.15"
ratatui = "0.28"
crossterm = "0.28"

# Testing
proptest = "1.0"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }  # Disabled plotters/font-kit
tempfile = "3.8"

# Tor integration - using SOCKS proxy approach to avoid crypto conflicts
tokio-socks = "0.5"
# Crypto for core types - only ed25519-dalek needed in workspace
ed25519-dalek = "2.0"

# BEP-44 DHT dependencies
dht = "0.7"
bencode = "0.4" 
sha1 = "0.10"
hkdf = "0.12"

# High-performance storage - unified version to avoid conflicts
rocksdb = { version = "0.22", features = ["multi-threaded-cf"] }
rusqlite = { version = "0.31", features = ["bundled"] }  # Tor dependency with bundled SQLite for cross-compilation
lz4 = "1.24"

# Linear algebra and mathematics
ndarray = { version = "0.15", features = ["serde"] }
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
bulletproofs = "4.0"

# Additional dependencies for testing
zeroize = { version = "1.5", features = ["derive"] }  # v0.9.14 FIX: Enable derive macros for q-aegis-ql
pin-project = "1.1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
idna = "0.4"

# Bitcoin integration for anonymous peer discovery - using workspace version
bitcoin_hashes = "0.11"
bitcoincore-rpc = "0.17"
lz4_flex = "0.11"

# GUI framework
slint = "1.7"
slint-build = "1.7"

# Financial/decimal math for DeFi components
bigdecimal = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"

# Collections and concurrency for performance
dashmap = "6.1"
crossbeam = "0.8"
rayon = "1.10"

# Additional crypto dependencies for ZK proofs
ark-ff = "0.4"
ark-ec = "0.4" 
ark-serialize = "0.4"
ark-std = "0.4"
ark-bn254 = "0.4"
ark-bls12-381 = "0.5"
ark-groth16 = "0.4"
ark-marlin = "0.3"
ark-poly = "0.4"
ark-poly-commit = "0.4"
ark-r1cs-std = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"

# GPU acceleration for STARK proofs
wgpu = "0.17"
# bytemuck moved to mistralrs-core dependencies section above (v1.23.0)

# Additional utilities
lazy_static = "1.4"
once_cell = "1.19"
num_cpus = "1.16"
parking_lot = "0.12"
clear_on_drop = "0.2"
constant_time_eq = "0.3"
arrayref = "0.3"
arrayvec = "0.7"
base-x = "0.2"
bs58 = "0.5"
data-encoding = "2.5"
either = { version = "1.15.0", features = ["serde"] }
indexmap = { version = "2.9.0", features = ["serde"] }
pyo3 = { version = "0.25.0", features = ["full", "extension-module", "either"] }
image = { version = "0.25.6", default-features = false, features = [
    'bmp',
    'dds', 
    'exr',
    'ff',
    'gif',
    'hdr',
    'ico',
    'jpeg',
    'png',
    'pnm',
    'qoi',
    'tga',
    'tiff',
    'webp',
] }

# Mistral.rs dependencies - AI model inference (v1.4.5-beta: Updated to match upstream mistral.rs)
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "a4ad7c7" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "a4ad7c7" }
candle-flash-attn-v3 = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "a4ad7c7" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "a4ad7c7" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.9.2-alpha.2", rev = "a4ad7c7" }
# v1.4.5-beta: New dependencies for mistral.rs update
objc2-metal = "0.3.1"
objc2-foundation = "0.3.1"
accelerate-src = { version = "0.3.2" }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
base64 = "0.22.1"
half = "2.6.0"
url = "2.5.4"
walkdir = "2.5.0"
data-url = "0.3.1"
float8 = "0.5.0"
regex = "1.11.1"
metal = { version = "0.27.0", features = ["mps"] }
toml = "0.8.22"
itertools = "0.14.0"
rand_distr = "0.5.0"
cli-table = "0.5.0"
# Note: Removed duplicate mistralrs-core dependencies (dirs, tqdm, minijinja, etc.)
# They are already defined in lines 129-172 above
paste = "1.0.15"
byteorder = "1.5.0"
x509-parser = "0.16"
yoke = "0.7.5"
pyo3-build-config = "0.25.0"
ctrlc = "3.4.7"
directories = "6.0.0"
rustyline = { version = "15.0.0", default-features = false, features = ["with-file-history"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
axum_static = "1.7.1"
mime_guess = "2.0.5"
include_dir = "0.7.4"
http = "1.3.1"
httparse = "1.8"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
socket2 = "0.5"
rust-mcp-sdk = { version = "0.4.2", default-features = false, features = ["server", "hyper-server", "2025_03_26"] }
rust-mcp-schema = { version = "0.1.11", default-features = false, features = ["schema_utils", "2024_11_05"] }
bindgen_cuda = { git = "https://github.com/guoqingbao/bindgen_cuda.git", version = "0.1.6" }
# Note: rubato, rustfft, hound, apodize, statrs already defined above (lines 167-172)

# Mistral.rs internal dependencies
mistralrs-core = { path = "mistral.rs/mistralrs-core" }
mistralrs-paged-attn = { path = "mistral.rs/mistralrs-paged-attn" }
mistralrs-quant = { path = "mistral.rs/mistralrs-quant" }
mistralrs-vision = { path = "mistral.rs/mistralrs-vision" }
mistralrs-server-core = { path = "mistral.rs/mistralrs-server-core" }
mistralrs = { path = "mistral.rs/mistralrs" }
mistralrs-audio = { path = "mistral.rs/mistralrs-audio" }
mistralrs-mcp = { path = "mistral.rs/mistralrs-mcp" }

# Note: hf-hub already defined above (line 131)
# Note: Benchmarks are defined in individual crate Cargo.toml files

# ═══════════════════════════════════════════════════════════════════
# v7.4.3: Release profile optimizations for maximum mining performance
# ═══════════════════════════════════════════════════════════════════
# Dev profile: faster incremental builds (Issue #033)
# codegen-units=16 parallelizes LLVM codegen; opt-level=1 gives
# enough optimization for debug runs without full release overhead.
# ═══════════════════════════════════════════════════════════════════
[profile.dev]
opt-level = 1               # Basic optimizations — prevents debug-mode slowness
codegen-units = 16           # Parallel codegen for faster incremental builds
debug = "line-tables-only"   # Minimal debug info — saves link time, still get backtraces

[profile.dev.package."*"]
opt-level = 2               # Optimize dependencies more than local code

# LTO + codegen-units=1 enables cross-crate inlining and whole-program optimization
# This allows blake3's SIMD routines to be fully inlined into the mining hot loop
# ═══════════════════════════════════════════════════════════════════
[profile.release]
lto = "thin"            # Link-Time Optimization: enables cross-crate inlining (+10-15%)
codegen-units = 1       # Single codegen unit: best optimization, slower compile (+5-10%)
opt-level = 3           # Maximum optimization level
strip = "symbols"       # Strip debug symbols for smaller binary
panic = "abort"         # Abort on panic: eliminates unwinding overhead

# Also optimize blake3 specifically since it's the mining hot path
[profile.release.package.blake3]
opt-level = 3
codegen-units = 1
