[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-grover"
version = "0.1.0"
description = "Quantum Grover miner for Q-NarwhalKnight — first quantum mining application for Origin Pilot OS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Q-NarwhalKnight Team" },
]
keywords = ["quantum", "mining", "grover", "qpanda", "blockchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "blake3>=1.0.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "pydantic>=2.0.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
qpanda = ["pyqpanda>=3.8.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
q-grover = "q_grover.cli:main"

[project.urls]
Homepage = "https://quillon.xyz"
Repository = "https://code.quillon.xyz"

[tool.hatch.build.targets.wheel]
packages = ["q_grover"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: requires network access to a running QNK node (deselect with '-m \"not live\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100
