[package]
name = "shadowchain-writer"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# Core dependencies
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Database
rocksdb = "0.24"

# Text processing and LaTeX
# tectonic = "0.15"  # Requires system libraries - see README for installation
comrak = "0.30"  # Markdown to HTML/LaTeX
textwrap = "0.16"
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }

# Interactive CLI
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.1"
console = "0.15"
termtree = "0.5"

# Story management
petgraph = "0.6"  # For relationship graphs
fuzzy-matcher = "0.3"  # Smart entity search
uuid = { version = "1.18", features = ["v4", "serde"] }

# Visualization and analysis
plotters = "0.3"  # For story arc visualization
sentiment = "0.1"  # Text sentiment analysis

# AI integration (optional)
reqwest = { version = "0.12", features = ["json"] }

# File handling
walkdir = "2.5"
notify = "7.0"  # Watch for file changes

[features]
default = ["full"]
full = ["ai", "advanced-viz"]
ai = []
advanced-viz = []