[package]
name = "crown-ash-api"
version.workspace = true
edition.workspace = true
description = "Crown & Ash — API handlers for game endpoints"
license.workspace = true

[dependencies]
crown-ash-types = { path = "../crown-ash-types" }
crown-ash-sim = { path = "../crown-ash-sim" }
crown-ash-narrative = { path = "../crown-ash-narrative" }
q-storage = { path = "../q-storage" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
anyhow = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
tracing = "0.1"
