[package]
name = "crown-ash-client"
version = "0.3.4"
edition = "2021"
description = "Crown & Ash — Bevy 3D game client"
license = "MIT"

# This crate is excluded from the main workspace due to bevy_egui dependency
# conflicts. Build separately:
#   cargo check --manifest-path crates/crown-ash-client/Cargo.toml
#   cargo run --manifest-path crates/crown-ash-client/Cargo.toml

[dependencies]
crown-ash-types = { path = "../crown-ash-types" }
crown-ash-narrative = { path = "../crown-ash-narrative" }
bevy = "0.15"
bevy_egui = "0.33"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"
