[package]
name = "crown-ash-narrative"
version.workspace = true
edition.workspace = true
description = "Crown & Ash — narrative text generation (templates + optional LLM)"
license.workspace = true

[features]
default = []
# Enable LLM-powered deep narrative via q-ai-inference.
# Without this feature, only template-based Tier 1 narration is available.
llm = []

[dependencies]
crown-ash-types = { path = "../crown-ash-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
