[package]
name = "crown-ash-plugin"
version.workspace = true
edition.workspace = true
description = "Crown & Ash — WASM plugin for on-chain game simulation"
license.workspace = true

[dependencies]
crown-ash-types = { path = "../crown-ash-types" }
crown-ash-sim = { path = "../crown-ash-sim" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

[lib]
# cdylib for the WASM plugin output, rlib for native test compilation.
crate-type = ["cdylib", "rlib"]
