[package]
name = "crown-ash-sim"
version.workspace = true
edition.workspace = true
description = "Crown & Ash — core deterministic simulation engine"
license.workspace = true

[dependencies]
crown-ash-types = { path = "../crown-ash-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
