[package]
name = "mitochondria-sim"
version = "0.1.0"
edition = "2021"
description = "Project Mitochondria v2 - Water-Robot Blockchain Simulation"
authors = ["Q-NarwhalKnight Team <team@q-narwhalknight.dev>"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha3 = "0.10"
blake3 = "1.5"
reqwest = { version = "0.11", features = ["json", "socks"] }
hex = "0.4"

# Simulation-specific dependencies
bevy = { version = "0.12", features = ["default"] }
nalgebra = "0.32"
petgraph = "0.6"
plotters = "0.3"

[[bin]]
name = "mitochondria-sim"
path = "src/main.rs"

[[bin]]  
name = "water-table-demo"
path = "src/water_table_demo.rs"