[package]
name = "q-ai-inference"
version.workspace = true
edition.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
# llama-cpp-2: Native Rust FFI to llama.cpp for 10-50x faster CPU/GPU inference
# Replaces mistral.rs as the primary inference engine (v5.1.0)
# Uses spawn_blocking since LlamaContext is !Send
# NOTE: Conflicts with bitnet-cpp (both link to native "llama"). Cannot be enabled simultaneously.
llama-cpp-2 = { version = "0.1", features = ["native"], optional = true }

# Mistral.rs - Legacy inference engine (feature-gated for fallback)
# Using local path to enable per-layer execution for distributed inference
mistralrs = { workspace = true, default-features = false, optional = true }
mistralrs-core = { workspace = true, default-features = false, optional = true }

# Candle for tensor operations (using same revision as mistral.rs)
candle-core = { git = "https://github.com/EricLBuehler/candle.git", version = "0.9.1", rev = "7511e510" }
candle-nn = { git = "https://github.com/EricLBuehler/candle.git", version = "0.9.1", rev = "7511e510" }

# Tokenizers for text processing (from HuggingFace)
tokenizers = { version = "0.21.2", default-features = false, features = ["onig"] }
either = "1.13"
indexmap = "2.12"

# CPU resource management
rayon = "1.10"
num_cpus = "1.16"

# Iterator utilities for tokenizer
itertools = { workspace = true }

# Networking
libp2p = { version = "0.54", features = ["gossipsub", "kad", "tcp", "noise", "yamux"] }
reqwest = { version = "0.12", features = ["stream"] }

# Async runtime
tokio = { version = "1.45", features = ["full", "rt-multi-thread"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and error handling
tracing = "0.1"
anyhow = "1.0"
thiserror = "2.0"

# System information
sysinfo = "0.30"

# Utilities
uuid = { version = "1.17", features = ["v4", "serde"] }
once_cell = "1.21"
parking_lot = "0.12"
chrono = "0.4"
ahash = { workspace = true }
regex = "1.11"

# Compression for tensor data
flate2 = "1.0"

# Image processing for vision models
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }

# Q-NarwhalKnight internal crates
q-types = { path = "../q-types" }
# q-network = { path = "../q-network" }  # Removed to break cyclic dependency
q-aegis-ql = { path = "../q-aegis-ql" }
q-zk-stark = { path = "../q-zk-stark" }
q-bitnet-ffi = { path = "../q-bitnet-ffi" }  # BitNet 1.58-bit inference for 16x faster tensor parallelism

# v2.5.2-beta: Native BitNet C++ bindings for true 1.58-bit ternary inference
# Uses dedicated bitnet.cpp (NOT llama.cpp) for 16x performance via LUT operations
# ⚠️ CURRENTLY BROKEN: bitnet-cpp v0.0.5 has GGML API incompatibility bugs
# Error: 'initialized', 'bitnet_tensor_extras', 'GGML_BITNET_MAX_NODES' not declared
# Track issue: https://github.com/eugenehp/bitnet-cpp-rs/issues
# For now, use pure Rust BitNet implementation (bitnet_integration.rs)
# bitnet-cpp = { version = "0.0.5", optional = true }  # DISABLED - links="llama" conflict with llama-cpp-2

# Cryptography for privacy layer and proof-of-inference
aes-gcm = "0.10"
sha2 = "0.10"  # SHA-256 for Merkle trees
sha3 = "0.10"
rand = "0.8"
getrandom = "0.2"
bincode = "1.3"
hex = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"

[[example]]
name = "test_real_inference"
path = "examples/test_real_inference.rs"

[[example]]
name = "test_forward_pass"
path = "examples/test_forward_pass.rs"

[[example]]
name = "test_full_generation"
path = "examples/test_full_generation.rs"

[[example]]
name = "test_qwen3vl_inference"
path = "examples/test_qwen3vl_inference.rs"

[features]
default = ["legacy-mistralrs"]  # v8.2.8: llama-cpp REMOVED — starves tokio at 0.3 tok/s
# v5.1.0: llama.cpp engine via llama-cpp-2 FFI (10-50x faster than mistral.rs)
# NOTE: Cannot be enabled with bitnet-native (native library link conflict)
llama-cpp = ["llama-cpp-2"]
# v5.1.0: Legacy mistral.rs engine (for fallback, will be phased out)
legacy-mistralrs = ["mistralrs", "mistralrs-core"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "mistralrs?/cuda", "mistralrs-core?/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "mistralrs?/metal", "mistralrs-core?/metal"]
# v2.5.2-beta: Native BitNet support via bitnet.cpp (DISABLED - crate v0.0.5 has GGML API incompatibility)
# When enabled, provides true 1.58-bit ternary LUT inference (16x faster than FP32)
# Currently broken: https://github.com/eugenehp/bitnet-cpp-rs/issues (ggml-bitnet-lut.cpp errors)
# NOTE: Cannot be enabled with llama-cpp (native library link conflict)
# bitnet-native = ["bitnet-cpp"]  # DISABLED - links="llama" conflict
